  * Improvements to quick search and new powerful advanced search engine.
  * More information and notification area in statusbar.
  * New settings, fixes, small but comfortable features.
  * Kino-teatr.ua parser added; IMDB parser fixed.
  * German translation (by Martin Gansser).
  * Link for translators in About window.
  * Saving of playlist data on exit.

 -- Eugene Melnik <jeka7js@gmail.com>  Sun, 27 Mar 2016 16:46:02 +0300

alexandra (1.4.0) unstable; urgency=low

  * Quick search improvements.
  * Fetching metadata from online sources.
  * Creating playlists.
  * New settings (shortcuts, double click and other).
  * Ability to build without MediaInfo support.
  * Updates checker.
  * Few changes in structure of the project.
  * Bugfixes, ui improvements and something like this.

 -- Eugene Melnik <jeka7js@gmail.com>  Thu, 14 Oct 2015 11:51:52 +0300

alexandra (1.3.0) unstable; urgency=low

  * Statistics function added (first version).
  * Application font selection.
  * "Alexandra Flat - Coast" theme added.
  * Calculating statistics, scanning for new films and search for moved films
    in background thread with ability to cancel.
  * Automatic selection of the eponymous poster for film.
  * Restructuring of settings window.
  * Format selection for poster saving.
  * Ability to setting path to the config file from command line argument.
  * Adding films from command line (all) and filemanager context menu (linux).
  * Portable mode.
  * Many kinds of usability improvements and bug fixes.

 -- Eugene Melnik <jeka7js@gmail.com>  Wed, 26 Aug 2015 16:55:44 +0300

alexandra (1.2.3) unstable; urgency=low

  * Search for moved films function added.
  * Added fulscreen mode.
  * Themes support.
  * "Alexandra Flat - Forest" theme.
  * French translation (by David Geiger and Adrien Daugabel).
  * Desktop file added (Linux).
  * New icon for main window and application.
  * Make install option configured.
  * Correction of old bugs and adding new ones.
